--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,17 @@
-PyTelegramBotAPI==4.17.0
+# Telegram Bot Framework
+pyTelegramBotAPI==4.17.0
+
+# For making HTTP requests to X-UI panel
 requests==2.32.3
+
+# For encryption of sensitive data
 cryptography==42.0.8
+
+# For loading environment variables from .env file
 python-dotenv==1.0.1
+
+# For generating QR codes
 qrcode[pil]==7.4.2
 Pillow==10.4.0
+
 json==2.0.9
