--- a/.env.example
+++ b/.env.example
@@ -1,38 +1,25 @@
-# .env.example
-# This file is an example. Copy it to .env and fill in your actual values.
-# DO NOT commit your .env file to version control!
+# ===================================================
+#           AlamorVPN Bot Environment Variables
+# ===================================================
 
-# --- Telegram Bot Settings ---
+# Telegram Bot Settings
+# توکن ربات شما که از BotFather دریافت می‌کنید
 BOT_TOKEN_ALAMOR="YOUR_TELEGRAM_BOT_TOKEN"
-ADMIN_IDS_ALAMOR="[YOUR_ADMIN_TELEGRAM_ID, ANOTHER_ADMIN_ID]" # Example: "[123456789, 987654321]"
 
-# --- X-UI / 3X-UI Panel Settings ---
-# Full URL of your X-UI/3X-UI panel, including port and subdirectory if applicable.
-# Example: https://1270.0.0.1:2053/path
-XUI_PANEL_URL_ALAMOR="YOUR_XUI_PANEL_URL"
-XUI_USERNAME_ALAMOR="YOUR_XUI_USERNAME"
-XUI_PASSWORD_ALAMOR="YOUR_XUI_PASSWORD"
+# آیدی عددی حساب کاربری ادمین‌ها (داخل براکت و جدا شده با کاما)
+ADMIN_IDS_ALAMOR="[123456789, 987654321]"
 
-# --- Database Settings ---
-# Name/path for the SQLite database. Default: database/alamor_vpn.db
+# --- Database & Encryption ---
+# نام و مسیر فایل دیتابیس
 DATABASE_NAME_ALAMOR="database/alamor_vpn.db"
 
-# --- Encryption Settings ---
-# A 32-byte Base64-encoded encryption key. Generated once.
-# To generate: from cryptography.fernet import Fernet; print(Fernet.generate_key())
-# Make sure to include the 'b'' prefix and the '=' suffix.
-ENCRYPTION_KEY_ALAMOR="YOUR_GENERATED_ENCRYPTION_KEY="
+# کلید رمزنگاری (با اجرای python code-generate.py یک کلید جدید بسازید)
+ENCRYPTION_KEY_ALAMOR="PASTE_YOUR_GENERATED_ENCRYPTION_KEY_HERE"
 
-# --- Free Test Account Settings ---
-FREE_TEST_DURATION_HOURS=1
-FREE_TEST_VOLUME_GB=0.5
+# --- Optional Settings (برای فعال‌سازی از حالت کامنت خارج کنید) ---
+# کانال عضویت اجباری
+# REQUIRED_CHANNEL_ID_ALAMOR="-1001234567890"
+# REQUIRED_CHANNEL_LINK_ALAMOR="https://t.me/YourChannel"
 
---- Required Channel Settings (Optional) ---
-If users must join a channel before using the bot.
-REQUIRED_CHANNEL_ID_ALAMOR="-1001234567890" # Must start with -100
-REQUIRED_CHANNEL_LINK_ALAMOR="https://t.me/YourChannelLinkHere" # Full link to the channel
-
---- Other Settings ---
-SUPPORT_CHANNEL_LINK_ALAMOR="https://t.me/YourSupportChannel"
-WELCOME_MESSAGE_ALAMOR="Welcome to Alamor VPN, {first_name}! 🤖"
-MAX_API_RETRIES_ALAMOR=3
+# لینک پشتیبانی
+# SUPPORT_CHANNEL_LINK_ALAMOR="https://t.me/YourSupportID"
