--- a/.env.example
+++ b/.env.example
@@ -7,7 +7,7 @@
 BOT_TOKEN_ALAMOR="YOUR_TELEGRAM_BOT_TOKEN"
 
 # آیدی عددی حساب کاربری ادمین‌ها (داخل براکت و جدا شده با کاما)
-ADMIN_IDS_ALAMOR="[123456789, 987654321]"
+ADMIN_IDS_ALAMOR=[123456789, 987654321]
 
 # --- Database & Encryption ---
 # نام و مسیر فایل دیتابیس
