--- a/.env.example
+++ b/.env.example
@@ -7,19 +7,21 @@
 BOT_TOKEN_ALAMOR="YOUR_TELEGRAM_BOT_TOKEN"
 
 # آیدی عددی حساب کاربری ادمین‌ها (داخل براکت و جدا شده با کاما)
-ADMIN_IDS_ALAMOR=[123456789, 987654321]
+ADMIN_IDS_ALAMOR="[123456789,987654321]"
 
 # --- Database & Encryption ---
 # نام و مسیر فایل دیتابیس
 DATABASE_NAME_ALAMOR="database/alamor_vpn.db"
-
+FREE_TEST_DURATION_HOURS_ALAMOR=1
+# حجم تست به گیگابایت
+FREE_TEST_VOLUME_GB_ALAMOR=0.1
 # کلید رمزنگاری (با اجرای python code-generate.py یک کلید جدید بسازید)
 ENCRYPTION_KEY_ALAMOR="PASTE_YOUR_GENERATED_ENCRYPTION_KEY_HERE"
-
+MAX_API_RETRIES_ALAMOR=3
 # --- Optional Settings (برای فعال‌سازی از حالت کامنت خارج کنید) ---
 # کانال عضویت اجباری
 # REQUIRED_CHANNEL_ID_ALAMOR="-1001234567890"
 # REQUIRED_CHANNEL_LINK_ALAMOR="https://t.me/YourChannel"
 
 # لینک پشتیبانی
-# SUPPORT_CHANNEL_LINK_ALAMOR="https://t.me/YourSupportID"
+SUPPORT_CHANNEL_LINK_ALAMOR="https://t.me/YourSupportID"
