feat: Add Zarinpal gateway and webhook server

--- a/.env.example
+++ b/.env.example
@@ -1,21 +1,19 @@
 # ===================================================
-#           AlamorVPN Bot Environment Variables
+#      AlamorVPN Bot Environment Variables Template
 # ===================================================
 
-# Telegram Bot Settings
-# توکن ربات شما که از BotFather دریافت می‌کنید
+# --- Telegram Bot Settings ---
 BOT_TOKEN_ALAMOR="YOUR_TELEGRAM_BOT_TOKEN"
+ADMIN_IDS_ALAMOR="[YOUR_NUMERIC_ADMIN_ID]"
 
-# آیدی عددی حساب کاربری ادمین‌ها (داخل براکت و جدا شده با کاما)
-ADMIN_IDS_ALAMOR="[123456789,987654321]"
+# --- Webhook Settings (for online payments like Zarinpal) ---
+# دامنه‌ای که برای درگاه پرداخت استفاده خواهد شد (مثلاً pay.yourdomain.com)
+# Zarinpal Settings
+ZARINPAL_MERCHANT_ID="YOUR_ZARINPAL_MERCHANT_ID_HERE"
+WEBHOOK_DOMAIN=""
 
 # --- Database & Encryption ---
-# نام و مسیر فایل دیتابیس
 DATABASE_NAME_ALAMOR="database/alamor_vpn.db"
-FREE_TEST_DURATION_HOURS_ALAMOR=1
-# حجم تست به گیگابایت
-FREE_TEST_VOLUME_GB_ALAMOR=0.1
-# کلید رمزنگاری (با اجرای python code-generate.py یک کلید جدید بسازید)
 ENCRYPTION_KEY_ALAMOR="PASTE_YOUR_GENERATED_ENCRYPTION_KEY_HERE"
 MAX_API_RETRIES_ALAMOR=3
 # --- Optional Settings (برای فعال‌سازی از حالت کامنت خارج کنید) ---
@@ -25,3 +23,6 @@ MAX_API_RETRIES_ALAMOR=3
 
 # لینک پشتیبانی
 SUPPORT_CHANNEL_LINK_ALAMOR="https://t.me/YourSupportID"
+
+ZARINPAL_SANDBOX="True"
+ZARINPAL_MERCHANT_ID="55041ea0-651e-4782-b1b8-3816b12c9dcf"
