--- a/.env.example
+++ b/.env.example
@@ -9,20 +9,22 @@ ADMIN_IDS_ALAMOR="[YOUR_NUMERIC_ADMIN_ID]"
 # --- Webhook Settings (for online payments like Zarinpal) ---
 # دامنه‌ای که برای درگاه پرداخت استفاده خواهد شد (مثلاً pay.yourdomain.com)
 # Zarinpal Settings
-ZARINPAL_MERCHANT_ID="YOUR_ZARINPAL_MERCHANT_ID_HERE"
+BOT_USERNAME_ALAMOR="YourBotUsername" # without @
 WEBHOOK_DOMAIN=""
-
+ZARINPAL_MERCHANT_ID=""
 # --- Database & Encryption ---
 DATABASE_NAME_ALAMOR="database/alamor_vpn.db"
 ENCRYPTION_KEY_ALAMOR="PASTE_YOUR_GENERATED_ENCRYPTION_KEY_HERE"
 MAX_API_RETRIES_ALAMOR=3
 # --- Optional Settings (برای فعال‌سازی از حالت کامنت خارج کنید) ---
 # کانال عضویت اجباری
-# REQUIRED_CHANNEL_ID_ALAMOR="-1001234567890"
-# REQUIRED_CHANNEL_LINK_ALAMOR="https://t.me/YourChannel"
+REQUIRED_CHANNEL_ID_ALAMOR="-1001234567890"
+REQUIRED_CHANNEL_LINK_ALAMOR="https://t.me/YourChannel"
 
 # لینک پشتیبانی
 SUPPORT_CHANNEL_LINK_ALAMOR="https://t.me/YourSupportID"
 
 ZARINPAL_SANDBOX="True"
 ZARINPAL_MERCHANT_ID="55041ea0-651e-4782-b1b8-3816b12c9dcf"
+
+
